--- a/material/partials/integrations/disqus.html
+++ b/material/partials/integrations/disqus.html
@@ -5,11 +5,11 @@
   %} {% endif %}
 {% set copyright = config.extra.copyright %} {% if page and page.meta and page.meta.copyright is string %} {% set copyright = page.meta.copyright
   %} {% endif %}
-{% set authors = 'OI-wiki' %} {% if page and page.meta and page.meta.author is string %} {% set authors = page.meta.author
+{% set authors = "Well Honey" %} {% if page and page.meta and page.meta.author is string %} {% set authors = page.meta.author
   %} {% endif %}
 <hr><blockquote class="page-copyright">
   <span><i class="md-icon">build</i>本页面最近更新：</span><span class="facts_modified"></span>，<a class="edit_history">更新历史</a><br>
-  <span><i class="md-icon">edit</i>发现错误？想一起完善？ <a href="{{ page.edit_url }}" title="{{ lang.t('edit.link.title') }}" class="page_edit_url">在 GitHub 上编辑此页！</a></span><br>
+  <span><i class="md-icon">edit</i>发现错误？想一起完善？ <a href="{{ page.edit_url }}" title="{{ lang.t('edit.link.title') }}" class="page_edit_url">为 Well Honey's Blog 做出自己的贡献！</a></span><br>
   <span><i class="md-icon">people</i>本页面贡献者：</span><span class="page_contributors">{{ authors }}</span><br>
   <span><i class="md-icon">copyright</i>本页面的全部内容在 <strong>{{ copyright }}</strong> 协议之条款下提供，附加条款亦可能应用</span>
 </blockquote>
@@ -22,17 +22,12 @@
 </form>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/OI-wiki/gitalk@mv1.0/dist/gitalk.css">
 <script src="https://cdn.jsdelivr.net/gh/OI-wiki/gitalk@mv1.0/dist/gitalk.min.js"></script>
-<script>
-  const gitalk = new Gitalk({
-    id: '{{ page.title | default("404", true)  }}',
-    owner: 'OI-wiki',
-    repo: 'gitment',
-    admin: ['Ir1d', 'cjsoft', 'TrisolarisHD', 'Xeonacid', 'sshwy', 'Enter-tainer', 'StudyingFather'],
-    clientID: 'd6a911c8fba0194626d4',
-    clientSecret: '867ec7e13cc99b420bd147cbb62d5cfec271ba81',
-    distractionFreeMode: false,
-    pagerDirection: 'first'
-  })
-  gitalk.render('gitalk-container')
+<script src="https://utteranc.es/client.js"
+        repo="kevin335200/b-dd-blog"
+        issue-term="pathname"
+        label="comment: "
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
 </script>
 {% endif %}
