--- a/src/partials/integrations/disqus.html
+++ b/src/partials/integrations/disqus.html
@@ -3,7 +3,7 @@
   %} {% endif %}
 {% set copyright = config.extra.copyright %} {% if page and page.meta and page.meta.copyright is string %} {% set copyright = page.meta.copyright
   %} {% endif %}
-{% set authors = 'OI-wiki' %} {% if page and page.meta and page.meta.author is string %} {% set authors = page.meta.author
+{% set authors = 'Well-Honey' %} {% if page and page.meta and page.meta.author is string %} {% set authors = page.meta.author
   %} {% endif %}
 <hr><blockquote class="page-copyright">
   <span><i class="md-icon">build</i>本页面最近更新：</span><span class="facts_modified"></span>，<a class="edit_history">更新历史</a><br>
@@ -19,19 +19,12 @@
 <div id="gitalk-container" data-no-instant>
 </div>
 </form>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/OI-wiki/gitalk@master/dist/gitalk.css">
-<script src="https://cdn.jsdelivr.net/gh/OI-wiki/gitalk@master/dist/gitalk.min.js"></script>
-<script>
-  const gitalk = new Gitalk({
-    id: '{{ page.title | default("404", true)  }}',
-    owner: 'OI-wiki',
-    repo: 'gitment',
-    admin: ['Ir1d', 'cjsoft', 'TrisolarisHD', 'Xeonacid', 'sshwy', 'Enter-tainer', 'StudyingFather'],
-    clientID: 'd6a911c8fba0194626d4',
-    clientSecret: '867ec7e13cc99b420bd147cbb62d5cfec271ba81',
-    distractionFreeMode: false,
-    pagerDirection: 'first'
-  })
-  gitalk.render('gitalk-container')
+<script src="https://utteranc.es/client.js"
+        repo="kevin335200/b-dd-blog"
+        issue-term="pathname"
+        label="comment: "
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
 </script>
 {% endif %}
